--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-radio-group": "^1.2.2",
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
